--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -562,27 +562,28 @@ jobs:
             echo "latest=$(echo $TAG | cut -d- -f4-6)" >> $GITHUB_OUTPUT
           fi
           echo "tag=$TAG" >> $GITHUB_OUTPUT
+      # download the previously-uploaded artifacts for the matrix version
       - name: Download SDK Artifacts
         id: download-artifacts
+        with:
+          pattern: swift-android-sdk-${{ matrix.version }}-*-host-ubuntu-22.04
         uses: actions/download-artifact@v4
       - name: Assemble SDK
         id: assemble-sdk
         run: |
           set -x
-          ls -la ~/
-          ls -lad ${{ steps.download-artifacts.outputs.download-path }}
-          ls -la ${{ steps.download-artifacts.outputs.download-path }}
-
-          ls -la ${{ steps.download-artifacts.outputs.download-path }}/*
+          pushd ${{ steps.download-artifacts.outputs.download-path }}
+          ls -la */*.tar.xz
 
           SDK_DIR=swift-${{ steps.version.outputs.tag }}-android-sdk
+          echo "Merging $(ls -1) into SDK_DIR: ${SDK_DIR}"
+
           mkdir ${SDK_DIR}
 
           for arch in x86_64 aarch64 armv7; do
             MERGEDIR="swift-android-sdk-${{ matrix.version }}-${arch}-host-ubuntu-22.04"
-            mkdir ${MERGEDIR}
             pushd ${MERGEDIR}
-            tar xf ${{ steps.download-artifacts.outputs.download-path }}/${MERGEDIR}.tar.xz
+            tar xf ${MERGEDIR}.tar.xz
 
             ARCH=`ls usr/lib/swift_static/android/*/swiftrt.o | tr '/' '\n' | tail -n 2 | head -n 1`
 
