--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -576,14 +576,15 @@ jobs:
           ls -la */*.tar.xz
 
           SDK_DIR=swift-${{ steps.version.outputs.tag }}-android-sdk
-          echo "Merging $(ls -1) into SDK_DIR: ${SDK_DIR}"
+          echo "Merging $(echo $(ls -1)) into SDK_DIR: ${SDK_DIR}"
 
           mkdir ${SDK_DIR}
 
           for arch in x86_64 aarch64 armv7; do
             MERGEDIR="swift-android-sdk-${{ matrix.version }}-${arch}-host-ubuntu-22.04"
             pushd ${MERGEDIR}
-            tar xf ${MERGEDIR}.tar.xz
+            # e.g. swift-android-sdk-release-aarch64-host-ubuntu-22.04/swift-release-android-aarch64-24-sdk.tar.xz
+            tar xf *.tar.xz
 
             ARCH=`ls usr/lib/swift_static/android/*/swiftrt.o | tr '/' '\n' | tail -n 2 | head -n 1`
 
@@ -625,6 +626,6 @@ jobs:
       - name: Upload Assembled SDK
         uses: actions/upload-artifact@v4
         with:
-          name: swift-${{ steps.version.outputs.tag }}-android-sdk
+          #name: swift-${{ steps.version.outputs.tag }}-android-sdk
           path: ~/swift-${{ steps.version.outputs.tag }}-android-sdk.tar.xz
 
