--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -585,6 +585,12 @@ jobs:
             pushd ${MERGEDIR}
             # e.g. swift-android-sdk-release-aarch64-host-ubuntu-22.04/swift-release-android-aarch64-24-sdk.tar.xz
             tar xf *.tar.xz
+            ls -1
+            ls -1 *
+
+            pushd swift-*-sdk
+
+            ls -1
 
             ARCH=`ls usr/lib/swift_static/android/*/swiftrt.o | tr '/' '\n' | tail -n 2 | head -n 1`
 
@@ -593,7 +599,7 @@ jobs:
                 TRIPLE="arm-linux-androideabi"
             fi
 
-            echo "Creating ${TRIPLE} from ${zip}…"
+            echo "Creating ${TRIPLE} from ${MERGEDIR}…"
 
             mkdir -p usr/lib/${TRIPLE}
             rm -r usr/bin
@@ -611,9 +617,10 @@ jobs:
             rm usr/lib/swift/clang
 
             popd
+            popd
 
             # copy all the processed SDK files into the SDK_DIR
-            rsync -ar ${MERGE_DIR}/*-sdk/ "${SDK_DIR}"
+            rsync -ar ${MERGE_DIR}/swift-*-sdk/ "${SDK_DIR}"
           done
 
           # remove the destination files, which include invalid absolute paths
@@ -622,7 +629,7 @@ jobs:
           echo "Merged toolchains into ${SDK_DIR}"
           du -skh "${SDK_DIR}"
           tar cJf "${SDK_DIR}".tar.xz "${SDK_DIR}"
-          shasum -a 256 .build/"${SDK_DIR}".tar.xz
+          shasum -a 256 "${SDK_DIR}".tar.xz
       - name: Upload Assembled SDK
         uses: actions/upload-artifact@v4
         with:
