--- a/.github/workflows/sdks.yml
+++ b/.github/workflows/sdks.yml
@@ -635,6 +635,5 @@ jobs:
       - name: Upload Assembled SDK
         uses: actions/upload-artifact@v4
         with:
-          #name: swift-${{ steps.version.outputs.tag }}-android-sdk
-          path: ~/swift-${{ steps.version.outputs.tag }}-android-sdk.tar.xz
+          path: ${{ steps.download-artifacts.outputs.download-path }}/${{ steps.version.outputs.tag }}-android-sdk.tar.xz
 
